--- a/docs/formatstorage.html.in
+++ b/docs/formatstorage.html.in
@@ -209,7 +209,7 @@ be created. For device based pools it will be the name of the directory in which
 devices nodes exist. For the latter <code>/dev/</code> may seem
 like the logical choice, however, devices nodes there are not
 guaranteed stable across reboots, since they are allocated on
-demand. It is preferrable to use a stable location such as one
+demand. It is preferable to use a stable location such as one
 of the <code>/dev/disk/by-{path,id,uuid,label</code> locations.
 </dd>
           <dt>format</dt>
