--- a/docs/index.html.in
+++ b/docs/index.html.in
@@ -57,7 +57,7 @@
       <li>Remote management using TLS encryption and x509 certificates</li>
       <li>Remote management authenticating with Kerberos and SASL</li>
       <li>Local access control using PolicyKit</li>
-      <li>Zero-conf discovery using Avahi mulicast-DNS</li>
+      <li>Zero-conf discovery using Avahi multicast-DNS</li>
       <li>Management of virtual machines, virtual networks and storage</li>
     </ul>
 
