--- a/Makefile.cfg
+++ b/Makefile.cfg
@@ -53,5 +53,6 @@ local-checks-to-skip =			\
 
 useless_free_options =		\
   --name=sexpr_free		\
+  --name=xmlFree		\
   --name=xmlXPathFreeContext	\
   --name=xmlXPathFreeObject
