Added listen_addr config param for daemon (Stefan  de Konink)

--- a/qemud/libvirtd.conf
+++ b/qemud/libvirtd.conf
@@ -42,6 +42,11 @@
 #tcp_port = "16509"
 
 
+# Override the default configuration which binds to all network
+# interfaces. This can be a numeric IPv4/6 address, or hostname
+#
+# ip_addr = "192.168.0.1"
+
 
 # Flag toggling mDNS advertizement of the libvirt service.
 #
