--- a/docs/apps.html.in
+++ b/docs/apps.html.in
@@ -67,7 +67,7 @@
       <dd>
 	A general purpose desktop management tool, able to manage
 	virtual machines across both local and remotely accessed
-	hypervisors. It is targetted at home and small office usage
+	hypervisors. It is targeted at home and small office usage
 	upto managing 10-20 hosts and their VMs.
       </dd>
       <dt><a href="http://virt-manager.org/">virt-viewer</a></dt>
