--- a/docs/remote.html.in
+++ b/docs/remote.html.in
@@ -652,6 +652,9 @@ Blank lines and comments beginning with <code>#</code> are ignored.
         <td> 1 (on) </td>
         <td>
   Listen for secure TLS connections on the public TCP/IP port.
+  Note: it is also necessary to start the server in listening mode by
+  running it with --listen or editing /etc/sysconfig/libvirtd by uncommenting the LIBVIRTD_ARGS="--listen" line
+  to cause the server to come up in listening mode whenever it is started.
 </td>
       </tr>
       <tr>
@@ -659,6 +662,7 @@ Blank lines and comments beginning with <code>#</code> are ignored.
         <td> 0 (off) </td>
         <td>
   Listen for unencrypted TCP connections on the public TCP/IP port.
+  Note: it is also necessary to start the server in listening mode.
 </td>
       </tr>
       <tr>
