--- a/configure.in
+++ b/configure.in
@@ -745,9 +745,13 @@ LIBPARTED_CFLAGS=
 LIBPARTED_LIBS=
 if test "$with_storage_disk" = "yes" -o "$with_storage_disk" = "check"; then
   AC_PATH_PROG([PARTED], [parted], [], [$PATH:/sbin:/usr/sbin])
-  if test -z "$PARTED" ; then with_storage_disk=no ; fi
+  if test -z "$PARTED" ; then
+    with_storage_disk=no
+    PARTED_FOUND=no
+  else
+    PARTED_FOUND=yes
+  fi
 
-  PARTED_FOUND=yes
   if test "$with_storage_disk" != "no" -a "x$PKG_CONFIG" != "x" ; then
     PKG_CHECK_MODULES(LIBPARTED, libparted >= $PARTED_REQUIRED, [], [PARTED_FOUND=no])
   fi
