Switch to using lcov for code coverage repots

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,10 @@
 ## Process this file with automake to produce Makefile.in
 
+LCOV = lcov
+GENHTML = genhtml
+
 SUBDIRS = gnulib/lib include src qemud proxy docs gnulib/tests \
-  python tests po scripts
+  python tests po
 
 ACLOCAL_AMFLAGS = -I m4 -I gnulib/m4
 
@@ -28,24 +31,15 @@ tests:
 	@(if [ "$(pythondir)" != "" ] ; then cd python ; \
 	  $(MAKE) MAKEFLAGS+=--silent tests ; fi)
 
-cov: cov-recursive cov-am
+cov: clean-cov
+	mkdir $(top_builddir)/coverage
+	$(LCOV) -c -o $(top_builddir)/coverage/libvirt.info.tmp -d $(top_srcdir)/src  -d $(top_srcdir)/qemud -d $(top_srcdir)/tests
+	$(LCOV) -r $(top_builddir)/coverage/libvirt.info.tmp -o $(top_builddir)/coverage/libvirt.info *usr*
+	rm $(top_builddir)/coverage/libvirt.info.tmp
+	$(GENHTML) -s -t "libvirt" -o $(top_builddir)/coverage --legend $(top_builddir)/coverage/libvirt.info
 
 clean-cov:
 	rm -rf $(top_builddir)/coverage
-	cd src && $(MAKE) $(AM_MAKEFLAGS) clean-cov
-
-cov-recursive:
-	cd src && $(MAKE) $(AM_MAKEFLAGS) cov
-
-cov-am:
-	rm -rf $(top_builddir)/coverage
-	mkdir $(top_builddir)/coverage
-	perl $(srcdir)/scripts/coverage-report.pl src/*.cov > $(top_builddir)/coverage/index.xml
-	xsltproc $(srcdir)/scripts/coverage-report.xsl \
-	  $(top_builddir)/coverage/index.xml \
-	  > $(top_builddir)/coverage/index.html
-	for i in $(top_builddir)/src/*.gcov ; do o=`echo $$i | sed -e 's,$(top_builddir)/src,coverage,'` ; \
-	  perl $(srcdir)/scripts/coverage-report-entry.pl $$i > $$o.html ; done
 
 # disable this check
 distuninstallcheck:
