virDomainMemoryPeek API         * include/libvirt/libvirt.h.in, src/libvirt.c, src/driver.h,           src/libvirt_sym.version: New virDomainMemoryPeek API.         * qemud/remote.c, qemud/remote_protocol.x, src/remote_internal.c:           Support for remote.         * src/qemu_driver.c: QEMU driver implementation of API.         * src/test.c: Test driver (null) implementation of API.         * docs/hvsupport.html.in: Document API.         * libvirt.spec.in: New path /var/cache/libvirt for temporary           storage of memory images.         * qemud/libvirtd.init.in: Remove any old temp files in           /var/cache/libvirt on restarts.         * src/Makefile.am: make install creates /var/cache/libvirt.         * configure.in: Detect mkdir -p.

--- a/configure.in
+++ b/configure.in
@@ -99,6 +99,8 @@ AC_PATH_PROG([TAR], [tar], [/bin/tar])
 AC_PATH_PROG([XMLLINT], [xmllint], [/usr/bin/xmllint])
 AC_PATH_PROG([XSLTPROC], [xsltproc], [/usr/bin/xsltproc])
 
+AC_PROG_MKDIR_P
+
 dnl External programs that we can use if they are available.
 dnl We will hard-code paths to these programs unless we cannot
 dnl detect them, in which case we'll search for the program
