--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -149,4 +149,8 @@ else
 EXTRA_DIST += parthelper.c
 endif
 
+# Create the /var/cache/libvirt directory when installing.
+install-exec-local:
+	$(MKDIR_P) $(DESTDIR)@localstatedir@/cache/libvirt
+
 CLEANFILES = *.gcov .libs/*.gcda .libs/*.gcno *.gcno *.gcda
