--- a/docs/hvsupport.html.in
+++ b/docs/hvsupport.html.in
@@ -145,9 +145,9 @@ updated on <i>2008-06-05</i>.
       <tr>
         <td> virDomainBlockPeek </td>
         <td> 0.4.3 </td>
-        <td> x </td>
-        <td> x </td>
-        <td> x </td>
+        <td> 0.4.3 </td>
+        <td> 0.4.3 </td>
+        <td> 0.4.3 </td>
         <td> x </td>
       </tr>
       <tr>
@@ -485,6 +485,14 @@ updated on <i>2008-06-05</i>.
         <td> virInitialize </td>
         <td> 0.1.0 </td>
         <td colspan="4"> not a HV function </td>
+      </tr>
+      <tr>
+        <td> virDomainMemoryPeek </td>
+        <td> 0.4.3 </td>
+        <td> x </td>
+        <td> 0.4.3 </td>
+        <td> 0.4.3 </td>
+        <td> x </td>
       </tr>
       <tr>
         <td> virNodeGetInfo </td>
